--- a/Maqueta del home/css/estilos.css
+++ b/Maqueta del home/css/estilos.css
@@ -7882,4 +7882,68 @@ footer .redes-sociales a {
   transform: translateY(-50%);
 }
 
+/**AYUDA PARA EL CONTENEDOR PRINCIPAL EN LA PÁGINA DE CONTACTO**/
+.myFormContainer{
+  margin-top: 0em;
+  width: 100%;
+
+}
+.container-contacto{
+
+}
+
+/**AYUDA PARA EL FORMULARIO EN LA PÁGINA DE CONTACTO**/
+.container-form{
+  width: 100%;
+  margin-bottom: 1em;
+}
+.title-contact{
+  height: 7em;
+  line-height: 7em;
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 3em;
+}
+.title-contact h2{
+  font-size: 3em;
+  vertical-align: middle;
+  margin: 0;
+  display: inline-block;
+  font-family: 'Asap', sans-serif;
+}
+.center-group{
+  text-align: center;
+}
+.container-form .form-group {
+    margin-bottom: 3em;
+}
+.container-form label{
+  font-family: 'Asap', sans-serif;
+  font-size: 1.2em;
+  font-weight: normal;
+}
+
+.container-form fieldset legend {
+  font-family: 'Asap', sans-serif;
+  font-size: 1.2em;
+  border-bottom: 0;
+}
+
+.container-form fieldset label {
+  font-family: 'Asap', sans-serif;
+  font-size: 1.2em;
+  border-bottom: 0;
+}
+
+.container-form .form-group fieldset .form-group{
+  margin-bottom: 0em;
+}
+
+/** AYUDA PARA LA IMAGEN DE ZAMBRANO EN LA PÁGINA DE CONTACTO **/
+.container-zambrano{
+  width: 100%;
+  height: auto;
+  background-color: grey;
+}
+
 /*# sourceMappingURL=estilos.css.map */
