Agregada pagina vista-nutricion.html

--- a/Maqueta del home/css/estilos.css
+++ b/Maqueta del home/css/estilos.css
@@ -8016,4 +8016,18 @@ footer .redes-sociales a {
   background-color: grey;
 }
 
+/** AYUDAS PARA LAS VISTAS **/
+.blog-post {
+  margin-bottom: 60px;
+}
+.blog-post-title {
+  margin-bottom: 5px;
+  font-size: 2em;
+  font-family: 'Asap', sans-serif;
+  font-weight: bold;
+}
+.blog-post-meta {
+  margin-bottom: 20px;
+  color: #999;
+}
 /*# sourceMappingURL=estilos.css.map */
