Agregada la pagina vista_rutinas.html

--- a/Maqueta del home/css/estilos.css
+++ b/Maqueta del home/css/estilos.css
@@ -8030,4 +8030,13 @@ footer .redes-sociales a {
   margin-bottom: 20px;
   color: #999;
 }
+
+h2 a{
+  text-decoration: none;
+  color: #333333;
+}
+h2 a:hover{
+  text-decoration: none;
+  color: #333333;
+}
 /*# sourceMappingURL=estilos.css.map */
