Agregada la pagina vista_salud.html

--- a/Maqueta del home/css/rutinas-style.css
+++ b/Maqueta del home/css/rutinas-style.css
@@ -99,6 +99,14 @@
   border-radius: 0;
   margin-top: .1em;
 }
+.hide-img .amarillo {
+  background-color: #fcffd4;
+  transition: all 0.3s ease 0s;
+}
+.hide-img .amarillo:hover {
+  background-color: #ffb715;
+  color: #fff;
+}
 .hide-img .rojo {
   background-color: #ffe9e9;
   transition: all 0.3s ease 0s;
