Agregada la pagina vista_videos.html

--- a/Maqueta del home/css/videos-style.css
+++ b/Maqueta del home/css/videos-style.css
@@ -223,7 +223,14 @@
   color: #FFF;
   opacity: .8;
 }
-
+.myLabel a{
+  text-decoration: none;
+  color: #FFF;
+}
+.myLabel a:hover{
+  text-decoration: none;
+  color: #FFF;
+}
 
 
 /********************************
