Corregido un bug en el slider que al pasar de una imagen a otra, la que seguia corria por debajo

--- a/Maqueta del home/css/estilos.css
+++ b/Maqueta del home/css/estilos.css
@@ -7584,16 +7584,7 @@ body {
 }
 .carousel .item {
     height: 400px;
-    position: relative;
-}
-
-
-  
-
-
-
-.item img {
-  width: 100%;
+    /*position: relative;*/
 }
 .item span {
   font-style: normal;
